# Qt-5-Cookbook

./: .gitignore  README.md  cat-formatted.sh  check-trailing-characters.sh  find-old-style-news.sh  iwyu.sh  qt5_4.imp  run-clang-tidy-clazy.sh  run-cmake-no-cast-from-ascii.sh  static-analysis.sh
ch01/distributing-linux-raspberrypi-applications/: application-launcher.sh  collect-cpp-dependencies.sh  collect-dependencies.sh  collect-qml-dependencies.sh
ch01/simple-qtquick/: CMakeLists.txt
ch01/simple-qtquick-app/: CMakeLists.txt
ch01/simple-qtquick-app/src/: main.cpp  main.qml  qtquickcontrols2.conf
ch01/simple-qtquick/src/: main.cpp
ch01/simple-qtwidgets/: CMakeLists.txt
ch01/simple-qtwidgets-app/: CMakeLists.txt
ch01/simple-qtwidgets-app/src/: main.cpp  main.qrc  mainwindow.cpp  mainwindow.h
ch01/simple-qtwidgets/src/: main.cpp
ch02/animating-graphic-items/: CMakeLists.txt
ch02/animating-graphic-items/src/: mainwindow.cpp
ch02/animating-graphic-items/src/icons/: generate-gif.sh
ch02/animating-graphical-items/: CMakeLists.txt
ch02/animating-graphical-items/src/: main.cpp  main.qrc  mainwindow.cpp  mainwindow.h
ch02/basic-wiring/: CMakeLists.txt
ch02/basic-wiring/src/: main.cpp  mycounter.cpp  mycounter.h
ch02/docktoolbar/: CMakeLists.txt
ch02/docktoolbar/src/: docktoolbar.cpp  docktoolbar.h  main.cpp  mainwindow.cpp  mainwindow.h  orientabletoolbutton.cpp  orientabletoolbutton.h
ch02/dockwidgets/: CMakeLists.txt
ch02/dockwidgets-advanced/: CMakeLists.txt
ch02/dockwidgets-advanced/src/: docktoolbar.cpp  docktoolbar.h  main.cpp  main.qrc  mainwindow.cpp  orientabletoolbutton.cpp  orientabletoolbutton.h
ch02/dockwidgets-toolbar/src/: docktoolbar.cpp  docktoolbar.h  mainwindow.cpp  orientabletoolbutton.h
ch02/dockwidgets/src/: main.cpp  mainwindow.cpp  mainwindow.h  orientabletoolbutton.cpp  orientabletoolbutton.h
ch02/handling-graphic-items/: CMakeLists.txt
ch02/handling-graphic-items/src/: mainwindow.cpp
ch02/handling-graphical-items/: CMakeLists.txt
ch02/handling-graphical-items/src/: main.cpp  main.qrc  mainwindow.cpp  mainwindow.h
ch02/i18n-l10n/: CMakeLists.txt  CMakeLists.txt.user.cef3552
ch02/i18n-l10n/l10n/: i18n-l10n.en_US.ts  i18n-l10n.pt_BR.ts  i18n-l10n_en_US.ts  i18n-l10n_pt_BR.ts
ch02/i18n-l10n/src/: l10n.qrc  main.cpp  mainwindow.cpp  mainwindow.h
ch02/logging/: CMakeLists.txt  configure-message-pattern.sh  configure-rules-file.sh  configure-rules.sh  logging.ini
ch02/logging/src/: main.cpp  main.cpp.ori  mycoordinate.cpp  mycoordinate.h
ch02/menus-and-toolbars/: CMakeLists.txt
ch02/menus-and-toolbars/src/: main.cpp  main.qrc  mainwindow.cpp  mainwindow.h
ch02/qtwidgets-app/: CMakeLists.txt
ch02/scxml-state-machine/: CMakeLists.txt
ch02/scxml-state-machine/src/: main.cpp  mainwindow.cpp  mainwindow.h  statemachine.scxml
ch02/selecting-animating-moving-graphical-items/: CMakeLists.txt
ch02/selecting-animating-moving-graphical-items/src/: main.cpp  mainwindow.cpp  mainwindow.h
ch02/settings/: CMakeLists.txt
ch02/settings/src/: main.cpp  mainwindow.cpp  mainwindow.h
ch02/state-machine/: CMakeLists.txt
ch02/state-machine/src/: main.cpp  main.qrc  mainwindow.cpp  mainwindow.h
ch02/state-machine/src/icons/: generate-gif.sh
ch02/styling/: CMakeLists.txt
ch02/styling/src/: main.cpp  main.qrc  mainwindow.cpp  style.qss
ch02/template-project/src/: main.cpp  mainwindow.cpp  mainwindow.h
ch03/i18n-l10n/: CMakeLists.txt
ch03/i18n-l10n/src/: main.qrc  mainwindow.cpp  mainwindow.h
ch03/logging/: configure-fatals.sh  configure-message-pattern.sh  logging.ini
ch03/qtquick-app/: CMakeLists.txt
ch03/qtquick-app/src/: main.cpp  main.qrc
ch03/settings/src/: mainwindow.cpp  mainwindow.h
ch03/state-machine/src/: mainwindow.cpp
ch05/qtquick-core/: CMakeLists.txt
ch05/qtquick-core/src/app/: core.cpp  main.qml  plugincontroller.cpp  plugincontroller.h
ch05/qtquick-plugincontroller/src/app/: core.cpp  core.h  main.qrc  plugincontroller.cpp  plugincontroller.h
ch05/qtquick-plugins/: CMakeLists.txt
ch05/qtquick-plugins/src/app/: core.h  main.cpp  main.qml  plugincontroller.cpp
ch05/qtquick-plugins/src/plugins/: CMakeLists.txt  example-plugin2.json  plugin1.json  plugin2.json
ch05/qtquick-plugins/src/plugins/plugin1/: plugin1.qml
ch05/qtquick-plugins/src/plugins/plugin2/: plugin2.qml
ch05/qtquickapp-core/: CMakeLists.txt
ch05/qtquickapp-plugincontroller/src/app/: CMakeLists.txt  main.qml  plugincontroller.cpp
ch05/qtquickapp-plugins/src/app/: main.cpp  plugincontroller.cpp
ch05/qtquickapp-plugins/src/plugins/: CMakeLists.txt  example-plugin1.json
ch05/qtwidgetsapp-core/src/app/: CMakeLists.txt  core.h  main.cpp  plugincontroller.cpp  plugincontroller.h  uicontroller.cpp  uicontroller.h
ch05/qtwidgetsapp-core/src/interfaces/: CMakeLists.txt  icore.cpp  icore.h  iplugincontroller.cpp  iplugincontroller.h  iuicontroller.cpp  iuicontroller.h
ch05/qtwidgetsapp-plugin/src/app/: main.qrc  plugincontroller.cpp  uicontroller.cpp  uicontroller.h
ch05/qtwidgetsapp-plugin/src/interfaces/: icore.h  iplugincontroller.h
ch05/qtwidgetsapp-plugin/src/plugins/: CMakeLists.txt
ch05/qtwidgetsapp-plugincontroller/: CMakeLists.txt
ch05/qtwidgetsapp-plugincontroller/src/: CMakeLists.txt
ch05/qtwidgetsapp-plugincontroller/src/app/: core.h  plugincontroller.h  uicontroller.h
ch05/qtwidgetsapp-plugincontroller/src/interfaces/: CMakeLists.txt  icore.cpp  icore.h  iplugin.h  iplugincontroller.cpp  iplugincontroller.h  iuicontroller.h
ch05/qtwidgetsapp-plugins/src/: CMakeLists.txt
ch05/qtwidgetsapp-plugins/src/app/: core.cpp  main.cpp  plugincontroller.cpp  plugincontroller.h  uicontroller.cpp  uicontroller.h
ch05/qtwidgetsapp-plugins/src/interfaces/: icore.cpp  iplugin.h  iplugincontroller.h  iuicontroller.cpp  iuicontroller.h
ch05/qtwidgetsapp-plugins/src/plugins/: CMakeLists.txt
ch05/qtwidgetsapp-uicontroller/: CMakeLists.txt
ch05/qtwidgetsapp-uicontroller/src/app/: CMakeLists.txt  core.cpp  main.qrc  plugincontroller.cpp  uicontroller.cpp  uicontroller.h
(+19 files in other folders)
